--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -5,13 +5,24 @@
     <link rel="alternate" type="application/atom+xml" title="<%= title %> - feed" href="/index.xml" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
     <title><%= title %></title>
+	<title>
+	<% if @path == 'index' %>
+	    elBl&euml;g
+	<% elsif @path.split('/').compact.length == 4 %>
+	    <%= title %> - elBl&euml;g
+	<% else %>
+	    <%= @path.capitalize.gsub(/[-]/, ' ') %> - elBl&euml;g
+	<% end %>
+	</title>
   </head>
   <body>
+	<header>
+		<h1>elBl&euml;g cambia.</h1>
+	</header>
     <section>
       <%= yield %> 
     </section>
     <footer>
-      powered by <a href="http://cloudhead.io/toto">toto</a>
     </footer>
   </body>
 </html>
