--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,8 @@
 html { margin: 20px }
 body {
   margin: 0 auto;
-  font-family: 'Baskerville', Georgia, Times, serif;
-  font-size: 20px;
+  font-family: sans-serif;
+  font-size: 13px;
   line-height: 30px;
   padding: 15px;
   width: 720px;
@@ -43,9 +43,9 @@ a:hover {
   text-decoration: underline;
 }
 body > header > h1 {
-	border-left: 30px solid black;
+	border-left: 30px solid #A82030;
 	padding-left: 30px;
-  font-size: 201px;
+  font-size: 2em;
   margin: 100px 0 15px 0;
   font-weight: normal;
 }
@@ -108,3 +108,5 @@ body > footer {
   font-size: 18px;
   color: #888;
 }
+body { font-family: 'Quattrocento Sans', sans-serif; }
+pre, code {background:#EEEEEE;}
