--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -19,7 +19,7 @@
 	<header>
 		
 		<h1>elBl&euml;g.</h1>
-		<small>en renovación</small>
+		<small>en renovación.</small>
 	</header>
     <section>
       <%= yield %> 
