--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -3,6 +3,8 @@
   <head>
  	<link href='http://fonts.googleapis.com/css?family=Quattrocento+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/colors.css">
+    <link rel="stylesheet" type="text/css" href="/css/type.css">
 
     <link rel="alternate" type="application/atom+xml" title="<%= title %> - feed" href="/index.xml" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
@@ -17,6 +19,9 @@
 	</title>
   </head>
   <body>
+	<div id="wrapper">
+		
+
 	<header>
 		
 		<h1>elBl&euml;g.</h1>
@@ -27,7 +32,7 @@
     </section>
     <footer>
     </footer>
-
+		</div>
   </body>
 </html>
 
