--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -6,7 +6,9 @@
     <link rel="stylesheet" type="text/css" href="/css/colors.css">
     <link rel="stylesheet" type="text/css" href="/css/type.css">
 
-    <link rel="alternate" type="application/atom+xml" title="<%= title %> - feed" href="/index.xml" />
+	<link rel="alternate" type="application/rss+xml" 
+	title="elbleg" href="http://feeds.feedburner.com/elbleg" />
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
 	<title>
 	<% if @path == 'index' %>
