--- a/templates/pages/archives.rhtml
+++ b/templates/pages/archives.rhtml
@@ -2,7 +2,7 @@
 
 <article class="post">
   <header>
-    <h1>Archivo</h1>
+    <h1>Posts anteriores</h1>
   </header>
 
   <section class="content">
