--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/css/type.css">
 
 	<link rel="alternate" type="application/rss+xml" 
-	title="elbleg" href="http://feeds.feedburner.com/elbleg" />
+	title="elbleg" href="http://feeds.feedburner.com/Bleg" />
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
 	<title>
