--- a/public/css/type.css
+++ b/public/css/type.css
@@ -127,3 +127,10 @@ a.back {
 #footer p {
 	margin: 0;
 }
+
+#dsq-content .dsq-request-user-info {
+	margin: 2em 0;
+}
+#disqus_thread #dsq-content h3 {
+	margin: 2em 0;
+}
