--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -32,10 +32,10 @@
 			    <li <%= ' class="active"' if @path == 'index' %>>
 			        <a href="/">Inicio</a>
 			    </li>
-			    <li <%= ' class="active"' if @path == 'archive' %>>
+			    <li <%= ' class="active"' if @path == 'archives' %>>
 			        <a href="/archives">Archivo</a>
 			    </li>
-			    <li <%= ' class="active"' if @path == 'books' %>>
+			    <li <%= ' class="active"' if @path == 'about' %>>
 			        <a href="/about">Acerca de...</a>
 			    </li>
 			</ul>
