--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -52,7 +52,7 @@
 	<script src="/javascript/main.js"></script>
 
 
-	<script type="text/javascript">
+	<script type="application/javascript">
       <!--
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-353826-8']);
