--- a/public/css/colors.css
+++ b/public/css/colors.css
@@ -47,6 +47,11 @@ nav ul li{
 nav ul li:hover{
 	background: #555;
 
+    transition:   .15s linear;
+    -moz-transition:   .15s linear;
+    -o-transition:   .15s linear;
+    -webkit-transition:   .15s linear;
+
 }
 .back:link,
 .back:visited {
