--- a/templates/pages/about.rhtml
+++ b/templates/pages/about.rhtml
@@ -6,7 +6,51 @@
   </header>
 
   <section class="content">
+	<p>
+		<a href="/">elBlëg</a> es el website personal de <a href="http://linkedin.com/in/whoisyeco">Jasson Cascante</a>, un desarrollador y diseñador interactivo que reside en Costa Rica. Socio fundador de <a href="http://edify.cr">Edify Software Consulting</a>. Cuando no está trabajando, se le puede encontrar <a href="http://twitter/yeco">twitteando</a> <a href="https://twitter.com/yeco/status/172224235312394241">incoherencias</a>, blogueando infrecuentemente o tomando café. Si es importante, lo podés contactar por <a href="mailto:yeco@elbleg.com">e-mail</a>.
+	</p>
+	<p>Usualmente odia hablar en tercera persona de sí mismo, pero entiende que eso hace más sencilla la ardua faena.</p>
+
+	<h3>Colophon</h3>
+	<p>
+		<ul>
+			<li>Movido con <a href="https://github.com/yeco/toto">Toto</a></li>
+			<li>Comentarios administrados con <a href="http://disqus.com/">Disqus</a></li>
+			<li>Repositorio en <a href="https://github.com/yeco/elbleg.com">Github</a></li>
+			<li>Fuentes Quattrocento Sans por <a href="https://plus.google.com/114391601624281927771/about">Pablo Impallari</a> y Anonymous Pro por <a href="https://profiles.google.com/marklsimonson/about">Mark Simonson</a> </li>
+			<li>Hosteado en <a href="http://heroku.com">Heroku</a></li>
+		</ul><!-- / -->
+	</p>
 	
+
+	<h3>FAQ <small>(o Preguntas que me paso respondiendo)</small></h3>
+	<br>
+	<h4>Por qué no actualizás más seguido elBlëg?</h4>
+	<p>
+		
+
+Lamentablemente mi tiempo es escaso por el trabajo, así que mientras tenga que trabajar para comer, mi trabajo será mi prioridad… amo comer.
+
+De paso me disculpás si no actualizo tan seguido como debería.
+
+</p>
+		<h4>Por qué elBlëg está en castellano?</h4>
+
+	<p>
+	
+		Que no hay demasiada información en inglés ya? No es que no me guste el inglés, no soy tan asno hablandolo, pero me parece más aporte elBleg en español.
+	</p>
+			<h4>Why is elBlëg only available in spanish?</h4>
+
+	<p>
+	
+		This is pretty much the same question above, but, I’ll answer again ok?.
+		I like english, but I think there’s already a lot of available information in english, almost all the important articles and web dev websites are in english, so… that’s why I consider that would be a bigger help if I keep my blog in spanish instead of english. You can always use google translate if there's something here that really seems interesting to you.
+	</p>
+
+	<p>
+	
+		No se me ocurrió ninguna otra… pero si tenés alguna duda, no dudés en contactarme por twitter (<a href="http://twitter.com/yeco" title="">@Yeco</a>) o <a href="mailto:yeco@elbleg.com">e-mail</a> si lo preferís.</p>
   </section>
 
    
