--- a/templates/pages/about.rhtml
+++ b/templates/pages/about.rhtml
@@ -7,7 +7,7 @@
 
   <section class="content">
 	<p>
-		<a href="/">elBlëg</a> es el website personal de <a href="http://linkedin.com/in/whoisyeco">Jasson Cascante</a>, un desarrollador y diseñador interactivo que reside en Costa Rica. Socio fundador de <a href="http://edify.cr">Edify Software Consulting</a>. Cuando no está trabajando, se le puede encontrar <a href="http://twitter/yeco">twitteando</a> <a href="https://twitter.com/yeco/status/172224235312394241">incoherencias</a>, blogueando infrecuentemente o tomando café. Si es importante, lo podés contactar por <a href="mailto:yeco@elbleg.com">e-mail</a>.
+		<a href="/">elBlëg</a> es un blog sobre interactividad, web y cualquier cosa relacionada al campo. Es el website personal de <a href="http://linkedin.com/in/whoisyeco">Jasson Cascante</a>, un desarrollador y diseñador interactivo que reside en Costa Rica. Socio fundador de <a href="http://edify.cr">Edify Software Consulting</a>. Cuando no está trabajando, se le puede encontrar <a href="http://twitter/yeco">twitteando</a> <a href="https://twitter.com/yeco/status/172224235312394241">incoherencias</a>, blogueando infrecuentemente o tomando café. Si es importante, lo podés contactar por <a href="mailto:yeco@elbleg.com">e-mail</a>.
 	</p>
 	<p>Usualmente odia hablar en tercera persona de sí mismo, pero entiende que eso hace más sencilla la ardua faena.</p>
 
