fix article issue

--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -1,15 +1,23 @@
 <!doctype html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
+
+
+<script src="http://192.168.2.103:8080/target/target-script-min.js#anonymous"></script>
+
+
  	<link href='http://fonts.googleapis.com/css?family=Quattrocento+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/colors.css">
     <link rel="stylesheet" type="text/css" href="/css/type.css">
 
+    <link rel="stylesheet" media="only screen and (max-device-width: 480px)" type="text/css" href="/css/smartphone.css" />
+
 	<link rel="alternate" type="application/rss+xml" 
 	title="elbleg" href="http://feeds.feedburner.com/Bleg" />
 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
 	<title>
 	<% if @path == 'index' %>
 	    elBl&euml;g
